Extra post routes deleted
